--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<meta charset="UTF-8" />
 		<title>Spring Framework Guru - Course Name</title>
 
 		<link
 			rel="stylesheet"
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+			href="../static/css/bootstrap-5.1.3-dist/css/bootstrap.min.css"
 			th:href="@{/css/bootstrap-5.1.3-dist/css/bootstrap.min.css}"
 			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 			crossorigin="anonymous"
 		/>
 
 		<script
-			src="https://code.jquery.com/jquery-3.6.0.min.js"
+			src="../static/js/jquery-3.6.0.min.js"
 			th:src="@{/js/jquery-3.6.0.min.js}"
-			integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
 			crossorigin="anonymous"
 		></script>
 
-		<style>
+		<link th:href="@{/css/custom.css}" rel="stylesheet" media="screen" />
+
+		<style th:remove="all">
 			.jumbotron {
 				background: url("https://d2vvqscadf4c1f.cloudfront.net/rGIBmJUAT46UuLPwXo3K_Fedora_Core_Ultimate2.jpg")
 					no-repeat center center;
@@ -143,7 +144,7 @@
 	<body>
 		<div class="jumbotron">
 			<div class="container">
-				<h1>Spring Framework Guru</h1>
+				<h1 class="display-5 fw-bold text-white">Spring Framework Guru</h1>
 				<p class="lead">Online Courses for Spring Framework</p>
 			</div>
 		</div>
@@ -158,8 +159,9 @@
 			<div class="row">
 				<div class="col-md-6">
 					<img
-						src="https://d2vvqscadf4c1f.cloudfront.net/scgeIJ9wRGGNWvK0jAld_ThumbFREE_01.png"
+						src="../static/images/SpringIntroThumb.png"
 						class="center-block"
+						th:src="@{images/ThymeleafThumb.png}"
 					/>
 				</div>
 				<div class="col-md-6">
