--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
 
 		<link th:href="@{/css/custom.css}" rel="stylesheet" media="screen" />
 
-		<title>Document</title>
+		<title th:text="#{index.page.title}">Page Title</title>
 
 		<style th:remove="all">
 			.jumbotron {
@@ -29,6 +29,8 @@
 				height: 350px;
 				color: white;
 				text-shadow: #444 0 1px 1px;
+				background-repeat: no-repeat;
+				background-size: cover;
 			}
 
 			body {
@@ -41,11 +43,6 @@
 				font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 				font-size: 14px;
 				line-height: 1.42857;
-			}
-
-			.row {
-				margin-left: -15px;
-				margin-right: -15px;
 			}
 
 			*::before,
@@ -93,7 +90,6 @@
 
 			img {
 				vertical-align: middle;
-				padding-left: 0.1rem;
 			}
 
 			img .rounded-circle {
@@ -145,17 +141,25 @@
 		</style>
 	</head>
 	<body>
-		<div class="jumbotron" th:background="@{./images/SpringCoreJumbotron.jpg}">
+		<div
+			class="jumbotron"
+			th:background="@{./images/SpringCoreJumbotron.jpg}"
+			style="background-size: cover; background-repeat: no-repeat"
+		>
 			<div class="container">
 				<h1 class="display-5 fw-bold text-white">Spring Framework Guru</h1>
-				<p class="lead">Online Courses for Spring Framework</p>
+				<p class="lead" th:text="#{index.courses.tagline}">
+					Online Courses for Spring Framework
+				</p>
 			</div>
 		</div>
 
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h1>Spring Framework Guru Courses</h1>
+					<h1 th:text="#{index.courses.headline}">
+						Spring Framework Guru Courses
+					</h1>
 				</div>
 			</div>
 
