--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -52,7 +52,7 @@
 				<div class="col-md-4">
 					<div class="course-listing">
 						<div class="row">
-							<a href="product.html" th:href="@{/product}">
+							<a href="product.html" th:href="@{/product/1}">
 								<div class="col-lg-12">
 									<div class="course-box-image-container">
 										<img
