updated product cards with dynamic info

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -47,7 +47,7 @@
 					</h1>
 				</div>
 			</div>
-
+			<!--                   PRODUCT 1                 -->
 			<div class="row course-list list">
 				<div class="col-md-4">
 					<div class="course-listing">
@@ -86,10 +86,17 @@
 						</div>
 					</div>
 				</div>
+
+				<!--                   PRODUCT 2                  -->
+
 				<div class="col-md-4">
 					<div class="course-listing">
 						<div class="row">
-							<a data-role="course-box-link" href="product.html">
+							<a
+								data-role="course-box-link"
+								href="product.html"
+								th:href="@{/product/2}"
+							>
 								<div class="col-lg-12">
 									<div class="course-box-image-container">
 										<img
@@ -123,10 +130,17 @@
 						</div>
 					</div>
 				</div>
+
+				<!--                   PRODUCT 3                 -->
+
 				<div class="col-md-4">
 					<div class="course-listing">
 						<div class="row">
-							<a data-role="course-box-link" href="product.html">
+							<a
+								data-role="course-box-link"
+								href="product.html"
+								th:href="@{/product/3}"
+							>
 								<div class="col-lg-12">
 									<div class="course-box-image-container">
 										<img
@@ -161,12 +175,16 @@
 					</div>
 				</div>
 			</div>
-
+			<!--                   PRODUCT 4                 -->
 			<div class="row">
 				<div class="col-md-4">
 					<div class="course-listing">
 						<div class="row">
-							<a data-role="course-box-link" href="product.html">
+							<a
+								data-role="course-box-link"
+								href="product.html"
+								th:href="@{/product/4}"
+							>
 								<div class="col-lg-12">
 									<div class="course-box-image-container">
 										<img
@@ -200,10 +218,17 @@
 						</div>
 					</div>
 				</div>
+
+				<!--                   PRODUCT 5                 -->
+
 				<div class="col-md-4">
 					<div class="course-listing">
 						<div class="row">
-							<a data-role="course-box-link" href="product.html">
+							<a
+								data-role="course-box-link"
+								href="product.html"
+								th:href="@{/product/5}"
+							>
 								<div class="col-lg-12">
 									<div class="course-box-image-container">
 										<img
@@ -230,10 +255,17 @@
 						</div>
 					</div>
 				</div>
+
+				<!--                   PRODUCT 6                 -->
+
 				<div class="col-md-4">
 					<div class="course-listing">
 						<div class="row">
-							<a data-role="course-box-link" href="product.html">
+							<a
+								data-role="course-box-link"
+								href="product.html"
+								th:href="@{/product/6}"
+							>
 								<div class="col-lg-12">
 									<div class="course-box-image-container">
 										<img
