--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -30,16 +30,16 @@
 		<style th:remove="all"></style>
 	</head>
 	<body>
-		<div class="jumbotron" th:replace="fragments/jumbotron.html :: jumbotron">
+		<div class="jumbotron" th:replace="fragments/jumbotron :: jumbotron">
 			<div class="container">
-				<h1 class="display-5 fw-bold text-white">Spring Framework Guru</h1>
+				<h1>Spring Framework Guru</h1>
 				<p class="lead" th:text="#{index.courses.tagline}">
 					Online Courses for Spring Framework
 				</p>
 			</div>
 		</div>
 
-		<div class="container">
+		<div class="container" style="height: 100vh">
 			<div class="row">
 				<div class="col-md-12">
 					<h1 th:text="${product.courseName}">
@@ -47,42 +47,76 @@
 					</h1>
 				</div>
 			</div>
-
-			<div class="row">
+			<div class="row course-listing">
 				<div class="col-md-6">
-					<img
-						src="../static/images/SpringIntroThumb.png"
-						class="center-block"
-						th:src="@{/images/ThymeleafThumb.png}"
-					/>
+					<div class="row">
+						<div class="col-md-12">
+							<img
+								src="../static/images/SpringIntroThumb.png"
+								th:src="@{'/images/'+${product.imageUrl}}"
+								class="center-block"
+							/>
+						</div>
+					</div>
+					<div class="row course-listing-extra-info col-xs-12">
+						<div class="col-xs-8">
+							<img
+								align="left"
+								alt="John Thompson"
+								src="../static/images/instructor_jt.jpg"
+								th:src="@{'/images/'+${product.author.image}}"
+								class="img-circle"
+							/>
+							<div
+								class="small course-author-name"
+								th:text="${(product.author.firstName) + ' ' + (product.author.lastName)}"
+							>
+								Author Name
+							</div>
+						</div>
+						<div class="col-xs-4">
+							<div
+								class="small course-price"
+								th:text=" '$' +  ${product.price > 0 ? product.price : 'Free'}"
+							>
+								$PRICE
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="col-md-6">
 					<div>
 						<h2 th:text="${product.courseSubtitle}">Course Title</h2>
 						<p th:text="${product.courseDescription}">
-							Parturient per donec porttitor congue class eros vestibulum
-							vulputate odio a vestibulum in donec lobortis ullamcorper mi nisi
-							parturient condimentum quisque venenatis est vivamus posuere
-							vestibulum.Pulvinar curae porta a a a ipsum a eget at a
-							scelerisque molestie tellus turpis in aliquam.
+							Adipiscing magna vestibulum fringilla tristique ad a primis ante
+							mi inceptos condimentum curabitur curabitur eu sed nullam
+							ridiculus nunc montes id nostra dui inceptos scelerisque posuere
+							ipsum mus. A scelerisque libero viverra eu condimentum mollis
+							suscipit mi consectetur semper dis ipsum nisi in nullam aliquet
+							iaculis in eros euismod bibendum. Adipiscing volutpat fringilla
+							bibendum duis a maecenas eu lorem accumsan fames sem faucibus ad
+							mauris aliquam nam. Torquent amet adipiscing fusce fringilla
+							venenatis tristique scelerisque natoque malesuada nostra duis nam
+							augue ridiculus pulvinar ultrices laoreet in condimentum justo id.
+							Nascetur condimentum maecenas magna metus curae est odio ad dui
+							fames quam a aenean consequat faucibus nostra lorem adipiscing
+							vestibulum ullamcorper etiam consectetur.
 						</p>
 					</div>
-
-					<button type="button" class="btn btn-primary">
-						<a class="btn btn-primary" th:text="#{index.courses.button}"
-							>Buy now</a
-						>
-					</button>
 				</div>
 			</div>
 
 			<div class="row">
-				<div class="col-md-offset-6 col-md-4"></div>
+				<div class="col-md-offset-6 col-md-4">
+					<button class="btn-success" th:text="#{index.courses.button}">
+						Buy Now!
+					</button>
+				</div>
 			</div>
-		</div>
 
-		<div class="container" th:replace="fragments/footer :: footer">
-			<p>footer</p>
+			<div class="container" th:replace="fragments/footer :: footer">
+				<p>footer</p>
+			</div>
 		</div>
 	</body>
 </html>
