--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,25 +30,37 @@
 		<style th:remove="all"></style>
 	</head>
 	<body>
-		<div class="jumbotron" th:replace="fragments/jumbotron.html :: jumbotron">
+		<div class="jumbotron" th:replace="fragments/jumbotron :: jumbotron">
 			<div class="container">
-				<h1 class="display-5 fw-bold text-white">Spring Framework Guru</h1>
-				<p class="lead" th:text="#{index.courses.tagline}">
-					Online Courses for Spring Framework
-				</p>
+				<h1>Spring Framework Guru</h1>
+				<p class="lead" th:text="#{index.courses.tagline}">Tag line</p>
 			</div>
 		</div>
 
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h1 th:text="#{index.courses.headline}">
-						Spring Framework Guru Courses
-					</h1>
+					<h1 th:text="#{index.courses.headline}">Courses Headline</h1>
 				</div>
 			</div>
-			<!--                   PRODUCT 1                 -->
+
 			<div class="row course-list list">
+				<div th:each="product,it : ${products}" class="col-md-4">
+					<div th:if="${(it.count gt 0 and it.count lt 4)}">
+						<div th:replace="fragments/productdiv :: productdiv"></div>
+					</div>
+				</div>
+			</div>
+
+			<div class="row course-list list">
+				<div th:each="product,it : ${products}" class="col-md-4">
+					<div th:if="${(it.count gt 3 and it.count lt 7)}">
+						<div th:replace="fragments/productdiv :: productdiv"></div>
+					</div>
+				</div>
+			</div>
+
+			<div class="row course-list list" th:remove="all">
 				<div class="col-md-4">
 					<div class="course-listing">
 						<div class="row">
@@ -58,7 +70,7 @@
 										<img
 											role="presentation"
 											src="../static/images/SpringIntroThumb.png"
-											th:src="@{/images/SpringIntroThumb.png}"
+											th:src="@{images/SpringIntroThumb.png}"
 											class="course-box-image"
 										/>
 									</div>
@@ -76,7 +88,7 @@
 									alt="John Thompson"
 									src="../static/images/instructor_jt.jpg"
 									th:src="@{images/instructor_jt.jpg}"
-									class="rounded-circle"
+									class="img-circle"
 								/>
 								<div class="small course-author-name">John Thompson</div>
 							</div>
@@ -86,23 +98,20 @@
 						</div>
 					</div>
 				</div>
-
-				<!--                   PRODUCT 2                  -->
-
 				<div class="col-md-4">
 					<div class="course-listing">
 						<div class="row">
 							<a
 								data-role="course-box-link"
 								href="product.html"
-								th:href="@{/product/2}"
+								th:href="@{/product/4}"
 							>
 								<div class="col-lg-12">
 									<div class="course-box-image-container">
 										<img
 											role="presentation"
 											src="../static/images/SpringCoreThumb.png"
-											th:src="@{/images/SpringCoreThumb.png}"
+											th:src="@{images/SpringCoreThumb.png}"
 											class="course-box-image"
 										/>
 									</div>
@@ -120,7 +129,7 @@
 									alt="John Thompson"
 									src="../static/images/instructor_jt.jpg"
 									th:src="@{images/instructor_jt.jpg}"
-									class="rounded-circle"
+									class="img-circle"
 								/>
 								<div class="small course-author-name">John Thompson</div>
 							</div>
@@ -130,23 +139,20 @@
 						</div>
 					</div>
 				</div>
-
-				<!--                   PRODUCT 3                 -->
-
 				<div class="col-md-4">
 					<div class="course-listing">
 						<div class="row">
 							<a
 								data-role="course-box-link"
 								href="product.html"
-								th:href="@{/product/3}"
+								th:href="@{/product/5}"
 							>
 								<div class="col-lg-12">
 									<div class="course-box-image-container">
 										<img
 											role="presentation"
 											src="../static/images/SpringCoreAdvancedThumb.png"
-											th:src="@{/images/SpringCoreAdvancedThumb.png}"
+											th:src="@{images/SpringCoreAdvancedThumb.png}"
 											class="course-box-image"
 										/>
 									</div>
@@ -164,7 +170,7 @@
 									alt="John Thompson"
 									src="../static/images/instructor_jt.jpg"
 									th:src="@{images/instructor_jt.jpg}"
-									class="rounded-circle"
+									class="img-circle"
 								/>
 								<div class="small course-author-name">John Thompson</div>
 							</div>
@@ -175,22 +181,22 @@
 					</div>
 				</div>
 			</div>
-			<!--                   PRODUCT 4                 -->
-			<div class="row">
+
+			<div class="row course-list list" th:remove="all">
 				<div class="col-md-4">
 					<div class="course-listing">
 						<div class="row">
 							<a
 								data-role="course-box-link"
 								href="product.html"
-								th:href="@{/product/4}"
+								th:href="@{/product/6}"
 							>
 								<div class="col-lg-12">
 									<div class="course-box-image-container">
 										<img
 											role="presentation"
 											src="../static/images/SpringCoreDevOpsThumb.png"
-											th:src="@{/images/SpringCoreDevOpsThumb.png}"
+											th:src="@{images/SpringCoreDevOpsThumb.png}"
 											class="course-box-image"
 										/>
 									</div>
@@ -208,7 +214,7 @@
 									alt="John Thompson"
 									src="../static/images/instructor_jt.jpg"
 									th:src="@{images/instructor_jt.jpg}"
-									class="rounded-circle"
+									class="img-circle"
 								/>
 								<div class="small course-author-name">John Thompson</div>
 							</div>
@@ -218,23 +224,20 @@
 						</div>
 					</div>
 				</div>
-
-				<!--                   PRODUCT 5                 -->
-
 				<div class="col-md-4">
 					<div class="course-listing">
 						<div class="row">
 							<a
 								data-role="course-box-link"
 								href="product.html"
-								th:href="@{/product/5}"
+								th:href="@{/product/2}"
 							>
 								<div class="col-lg-12">
 									<div class="course-box-image-container">
 										<img
 											role="presentation"
 											src="../static/images/SpringCoreUltimateThumb.png"
-											th:src="@{/images/SpringCoreUltimateThumb.png}"
+											th:src="@{images/SpringCoreUltimateThumb.png}"
 											class="course-box-image"
 										/>
 									</div>
@@ -255,23 +258,20 @@
 						</div>
 					</div>
 				</div>
-
-				<!--                   PRODUCT 6                 -->
-
 				<div class="col-md-4">
 					<div class="course-listing">
 						<div class="row">
 							<a
 								data-role="course-box-link"
 								href="product.html"
-								th:href="@{/product/6}"
+								th:href="@{/product/3}"
 							>
 								<div class="col-lg-12">
 									<div class="course-box-image-container">
 										<img
 											role="presentation"
 											src="../static/images/ThymeleafThumb.png"
-											th:src="@{/images/ThymeleafThumb.png}"
+											th:src="@{images/ThymeleafThumb.png}"
 											class="course-box-image"
 										/>
 									</div>
@@ -289,7 +289,7 @@
 									alt="John Thompson"
 									src="../static/images/instructor_jt.jpg"
 									th:src="@{images/instructor_jt.jpg}"
-									class="rounded-circle"
+									class="img-circle"
 								/>
 								<div class="small course-author-name">John Thompson</div>
 							</div>
@@ -301,6 +301,7 @@
 				</div>
 			</div>
 		</div>
+
 		<div class="container" th:replace="fragments/footer :: footer">
 			<p>footer</p>
 		</div>
